@@ -7,6 +7,9 @@ v7.0.2 May 05 2015
       CAUTION: Items with "?" demand will be ignored when using --demand.
       If you want to enter demand values in the update tool, you will
       need to use the "--use-demand" (-D) option of "update".
+. (kfsone) Fixed #231 Exception when using --quantity in buy/sell
+. (kfsone) --supply is now an alias for --quantity in "buy"
+. (kfsone) --demand is now an alias for --quantity in "sell"
 
 v7.0.1 May 04 2015
 . (kfsone) Minor fixes from forums
